src/index.css
:root {
	background-color: #222c51;
	/* background-image: url("https://sothebys-md.brightspotcdn.com/dims4/default/d74825c/2147483647/strip/true/crop/2000x1588+0+0/resize/800x635!/quality/90/?url=http%3A%2F%2Fsothebys-brightspot.s3.amazonaws.com%2Fmedia-desk%2Fwebnative%2Fimages%2Fbd%2F3a%2Fc8ce158041feac4dc32cbcbbb0d8%2Fn11753-cl3n7-t2-02-a.jpg"); */
	/* 'https://res.cloudinary.com/dh41vh9dx/image/upload/v1761001615/image_3_n4tvfn.webp' */
	background-image: url("https://res.cloudinary.com/dh41vh9dx/image/upload/v1761001439/image_1_s0yql2.webp");
	
	



	
	color: rgba(255, 255, 255, 0.87);
	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
	font-weight: 400;
	line-height: 1.5;
	/* background-image: url("https://res.cloudinary.com/dh41vh9dx/image/upload/v1761001381/elegant_closet_yst0ec.webp"); */
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;

	color-scheme: light dark;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;

	font-synthesis: none;
	text-rendering: optimizeLegibility;

	/**** VARIABLES ****/

	/* COLORS */
	--background-green: #6e707036;
	--Black: #000000;
	--Soft-Black: #141313a7;
	--Op-Black:#333;
	--Trans-Black:#00000033;
	--White: #FFFFFF;
	--Dark-Grey: #2a302d;
	--Medium-Grey: #777;
	--Op-Light-Grey: #888;
	--Lightest-Grey: #bcbcbc;

	--Focus-Blue: #4ab6f5;
	--Outline-Blue: #646cff;
	--Focus-Mustard: #1f36b9;
	--Background-color:  rgba(120, 172, 191, 0.396) ;
	/* linear-gradient(180deg, rgba(120, 172, 191, 1) 0%, rgba(103, 131, 133, 1) 50%); */

	
	/* FONTS */
	
	/* STYLES */
	--blur: blur(.6rem);
	--box-shadow: .5rem .75rem 2rem .75rem rgba(0, 0, 0, 0.875);
	

	--border-radius-ty: .25rem;
	--border-radius-sm: .5rem;
	--border-radius-md: 1rem;
	--border-radius-lg: 2rem;
	--border-radius-circle: 50%;

	--padding-rectangle-sm: .5rem 1rem;

	--border-black-sm: solid 1px var(--Black);
	--border-white-sm: solid 1px var(--White);

	/* SPACING */
	--spacing-50: .25rem;
	--spacing-100: .5rem;
	--spacing-200: 1rem;
	--spacing-300: 1.5rem;
	--spacing-400: 2rem;
	--spacing-500: 2.5rem;
	--spacing-600: 3rem;
	--spacing-700: 3.5rem;
	--spacing-800: 4rem;
	--spacing-900: 4.5rem;
	--spacing-1000: 5rem;
	--spacing-1100: 5.25rem;
}

*{
	box-sizing: border-box;
	/* -webkit-text-stroke: 2px black;
	paint-order: stroke; */
}

#root {
	width: 100%;
	height: 100vh;
	max-width: 1280px;
	text-align: center
}

body {
	display: flex;
	min-width: 100%;
	min-height: 100vh;
	margin: 0;
	place-items: center;
}

h1 {
	margin: 1rem 0;
	color: white;
	font-size: 3em;
	line-height: 1.1;
	paint-order: stroke;
	-webkit-text-stroke: 2px var(--Black);

}

button {
	display: flex;
	justify-content: space-between;
	align-items: center;
	width: calc-size(fit-content, size * 1.05);
	margin: var(--spacing-100);
	padding: 0.6em 1.2em;
	border: var(--border-black-sm);
	border-radius: var(--border-radius-sm);
	background-color: var(--Soft-Black);
	font-family: inherit;
	font-size: 1em;
	font-weight: 500;
	cursor: pointer;
	transition: border-color 0.25s;
}

button:hover {
	box-shadow: 0 1rem 2rem var(--Trans-Black);
	transition: all 0.2s;
	transform: translateY(-3px);
	border-color: var(--Outline-Blue)
}

button::after {
	opacity: 0;
	transition: all 0.2s;
	transform: scaleX(1.4) scaleY(1.6);
}

button:active,
button:focus {
	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
	transition: all 0.2s;
	transform: translateY(-1px);
	outline: none;
}

button:focus,
button:focus-visible {
	outline: .5rem auto -webkit-focus-ring-color;

}

@media (prefers-color-scheme: light) {
	:root {
		background-color: var(--White);
		color: #213547;
	}
	a:hover {
		color: #747bff;
	}
	button {
		background-color: #f9f9f9;
	}
}

